 - Adds a choice at character creation.
 - Adds a menu item Gender to the player party menu. You can change your choice (Auto, Male, Female) at any point.
 - If you wish to continue playing the game as usual, you don't have to do anything.
* Bugfix: A few instances where decreasing stats would actually increase them are fixed. Thanks JadedFirefly for the report!
* Various typos fixed.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.5.6
-------------
* Bugfix: Gryphon feet are no longer referred to as talons.
* Bugfix: Fixed some bugged output in some of Gwendy's new scenes.
* Typo: Fixed a duplicate line in Barnaby BJ scene.
* Typo: Various word-choice consistency issues fixed.
* Added new $20 patreons from 0.5.5 to credits.

Adding 16k words of new content, revolving around Adrian the farmhand. He's a complex beast, though part of his content is locked behind an event not yet in the game. Here's what is in:
* Talk (he's not much of a talker).
* Work (with some background scenes). Builds friendship.
* Flirt, from innocent to lewd. Builds his confidence.
* Lay claim on Gwendy and be a general Jerk to Adrian. Makes him jealous of you.
* Seduction that leads to opening up sex options. Currently:
 - Give him a handjob.
 - Give him a blowjob.
* In order to be able to explore the new content, a RESET option is available for Adrian. It will only show up in debug mode, and will probably be removed when his content is more complete.

The sex scenes are relatively short but contains a lot of variation based on state, randomness and choices.

Also:
* Gwendy's Work option will randomly send you to help Adrian.
* Gwendy has some dialog variations when talking about Adrian, depending on his current state.

Version 0.5.5
-------------
* Bugfix: Introduction Review bug that would eventually cause issues with the parser.
* Bugfix: Fixed an error in the Catboy Mage AI.
* Various typos fixed.