@@ -13,6 +13,7 @@ Version 0.5.7
  - If you wish to continue playing the game as usual, you don't have to do anything.
 * Bugfix: A few instances where decreasing stats would actually increase them are fixed. Thanks JadedFirefly for the report!
 * Various typos fixed.
+* Item: Added a Leporine+ item (rabbit TF level 2). It is dropped from Lagon, Brute Lagon and Brute Ophelia, and can drop from regular rabbit mobs with very low rate. It has less extreme effects than Equinium+ does, but there are special variations of the item brewed by Ophelia.
 
 --------------------------------------------
              PREVIOUS VERSIONS
